# elemental

./: .gitignore  CMakeLists.txt  ElemInfo.qml  README.md  Table.qml  TableCell.qml  data.js  main.cpp  main.qml  resources.qrc
